--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wearapp">
-    <uses-permission android:name="android.permission.INTERNET"/>
+    package="com.example.wearapp" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
@@ -11,17 +11,23 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/logo1_foreground"
         android:supportsRtl="true"
-        android:theme="@style/Theme.WEARapp">
+        android:theme="@style/Theme.WEARapp" >
+        <activity
+            android:name=".RatingActivity"
+            android:exported="false"
+            android:label="@string/title_activity_rating"
+            android:theme="@style/Theme.WEARapp.NoActionBar" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <receiver android:name="com.example.Notifications.AlarmReceiver"/>
+
+        <receiver android:name="com.example.Notifications.AlarmReceiver" />
     </application>
 
 </manifest>
